--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Free online games. Play games with friends, with or without an account">
     <link rel="icon" href="icon.png">
     <title>Unseen</title>
+      <meta name="description" content="Detectives vs MisterX, who's gonna make it? Invite friends and start playing">
+      <meta property="og:title" content="Unseen, chasing MisterX" />
+      <meta property="og:url" content="https://papero.tk/unseen" />
+      <meta property="og:description" content="Online multiplayer chasing game, play with friends">
+      <meta property="og:image" content="//icon.png">
+      <meta property="og:type" content="games.plays" />
   </head>
   <body>
     <noscript>
