--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <meta property="og:title" content="Unseen, chasing MisterX" />
       <meta property="og:url" content="https://papero.tk/unseen" />
       <meta property="og:description" content="Online multiplayer chasing game, play with friends">
-      <meta property="og:image" content="//icon.png">
+      <meta property="og:image" content="https://papero.tk/unseen/icon.png">
       <meta property="og:type" content="games.plays" />
   </head>
   <body>
