--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
       <meta property="og:url" content="https://papero.tk/unseen" />
       <meta property="og:description" content="Online multiplayer chasing game, play with friends">
       <meta property="og:image:secure" content="https://papero.tk/unseen/icon.png">
+      <meta property="og:image:width" content="300">
+      <meta property="og:image:height" content="300">
       <meta property="og:type" content="games.plays" />
   </head>
   <body>
