--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <title>Unseen</title>
       <meta name="description" content="Detectives vs MisterX, who's gonna make it? Invite friends and start playing">
       <meta property="og:title" content="Unseen, chasing MisterX" />
-      <meta property="og:url" content="http://www.papero.tk/unseen" />
+      <meta property="og:url" content="http://papero.tk/unseen" />
       <meta property="og:description" content="Online multiplayer chasing game, play with friends">
-      <meta property="og:image:secure" content="https://papero.tk/unseen/icon.png">
+      <meta property="og:image:secure" content="https://www.papero.tk/unseen/icon.png">
       <meta property="og:image:width" content="300">
       <meta property="og:image:height" content="300">
       <meta property="og:type" content="games.plays" />
