--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       <meta property="og:title" content="Unseen, chasing MisterX" />
       <meta property="og:url" content="http://papero.tk/unseen" />
       <meta property="og:description" content="Online multiplayer chasing game, play with friends">
-      <meta property="og:image" content="https://www.papero.tk/unseen/icon.png"> == $0
+      <meta property="og:image" content="https://www.papero.tk/unseen/icon.png">
       <meta property="og:type" content="games.plays" />
   </head>
   <body>
