--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,10 @@
 
     <title>Unseen</title>
       <meta name="description" content="Detectives vs MisterX, who's gonna make it? Invite friends and start playing">
-      <meta property="og:title" content="Unseen, chasing MisterX" />
-      <meta property="og:url" content="http://papero.tk/unseen" />
-      <meta property="og:description" content="Online multiplayer chasing game, play with friends">
+      <meta property="og:site_name" content="Unseen" />
+      <meta property="og:url" content="http://papero.tk/unseen/" />
       <meta property="og:image" content="https://www.papero.tk/unseen/icon.png">
-      <meta property="og:type" content="games.plays" />
+      <meta property="og:locale" content="en_US" />
   </head>
   <body>
     <noscript>
