--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       <meta property="og:site_name" content="Unseen" />
       <meta property="og:url" content="http://papero.tk/unseen/" />
       <meta property="og:image" content="https://www.papero.tk/unseen/icon.png">
+      <meta property="og:image:secure" content="https://www.papero.tk/unseen/icon.png">
       <meta property="og:image:width" content="256">
       <meta property="og:image:width" content="256">
       <meta property="og:locale" content="en_US" />
