--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
     <title>Unseen</title>
       <meta name="description" content="Detectives vs MisterX, who's gonna make it? Invite friends and start playing">
       <meta property="og:site_name" content="Unseen" />
-      <meta property="og:url" content="http://papero.tk/unseen/" />
-      <meta property="og:image" content="https://www.papero.tk/unseen/icon.png">
-      <meta property="og:image:secure" content="https://www.papero.tk/unseen/icon.png">
+      <meta property="og:url" content="http://papero.me/unseen/" />
+      <meta property="og:image" content="https://www.papero.me/unseen/icon.png">
+      <meta property="og:image:secure" content="https://www.papero.me/unseen/icon.png">
       <meta property="og:image:width" content="256">
       <meta property="og:image:width" content="256">
       <meta property="og:locale" content="en_US" />
