--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,9 @@
       <meta name="theme-color" content="#ffffff">
 
     <title>Unseen</title>
-      <meta name="description" content="Detectives vs MisterX, who's gonna make it? Invite friends and start playing">
-      <meta property="og:site_name" content="Unseen" />
+      <meta name="description" content="Detectives vs MisterX, who's gonna make it? Invite friends and start playing one the best board games ever!">
+      <meta name="keywords" content="board game online multiplayer free">
+      <meta property="og:site_name" content="Unseen board game"/>
       <meta property="og:url" content="http://papero.me/unseen/" />
       <meta property="og:image" content="https://www.papero.me/unseen/icon.png">
       <meta property="og:image:secure" content="https://www.papero.me/unseen/icon.png">
